--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -20,8 +20,12 @@
   <div style="margin-left:15%">
 
     <a href="lanimal"> <img src="../../../assets/image/1.png" width="900"  height="150" class="imagen1"> </a>    
-    <a href="lanimal"> <img src="../../../assets/image/2.png" width="900"  height="150" class="imagen1"> </a>    
+    <a href="buscar"> <img src="../../../assets/image/2.png" width="900"  height="150" class="imagen1"> </a>    
     <a href="lanimal"> <img src="../../../assets/image/3.png" width="900"  height="150" class="imagen1"> </a>    
+
+    <a href="procedimiento"> <img src="../../../assets/image/4.png" width="400"  height="150" class="imagen1"></a>
+    <a href=""> <img src="../../../assets/image/5.png" width="400"  height="150" class="imagen1" style="margin-left: 100px;"></a>
+
 
   <div class="w3-container">
 
