--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -24,7 +24,7 @@
     <a href="lanimal"> <img src="../../../assets/image/3.png" width="900"  height="150" class="imagen1"> </a>    
 
     <a href="procedimiento"> <img src="../../../assets/image/4.png" width="400"  height="150" class="imagen1"></a>
-    <a href=""> <img src="../../../assets/image/5.png" width="400"  height="150" class="imagen1" style="margin-left: 100px;"></a>
+    <a href="empleado"> <img src="../../../assets/image/5.png" width="400"  height="150" class="imagen1" style="margin-left: 100px;"></a>
 
 
   <div class="w3-container">
