Se creo la ventana de reserva y login

--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -21,7 +21,7 @@
 
     <a href="lanimal"> <img src="../../../assets/image/1.png" width="900"  height="150" class="imagen1"> </a>    
     <a href="buscar"> <img src="../../../assets/image/2.png" width="900"  height="150" class="imagen1"> </a>    
-    <a href="lanimal"> <img src="../../../assets/image/3.png" width="900"  height="150" class="imagen1"> </a>    
+    <a href="reserva"> <img src="../../../assets/image/3.png" width="900"  height="150" class="imagen1"> </a>    
 
     <a href="procedimiento"> <img src="../../../assets/image/4.png" width="400"  height="150" class="imagen1"></a>
     <a href="empleado"> <img src="../../../assets/image/5.png" width="400"  height="150" class="imagen1" style="margin-left: 100px;"></a>
@@ -29,7 +29,7 @@
 
   <div class="w3-container">
 
-    
+      
 
   
   </div>
