Se modifico y agregaron funcionalidades a horas

--- a/src/app/animal/lanimal/lanimal.component.html
+++ b/src/app/animal/lanimal/lanimal.component.html
@@ -113,6 +113,10 @@
           </option>
         </select>
 
+        <label for="tipo_sangre"> </label>
+        <input class="form-control" class="col-3" placeholder="Ingrese el tipo de sangre del animal" type="text"
+          id="tipo_sangre" required [(ngModel)]="model1.tipo_sangre" name="tipo_sangre" style="margin-left: 30px;" />
+
         <br>
         <br>
         <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
