--- a/src/app/empleado/listemp/listemp.component.html
+++ b/src/app/empleado/listemp/listemp.component.html
@@ -76,9 +76,9 @@
                 <tr *ngFor="let emps of emplist">
 
 
-                    <td>{{emps.id_emp}}</td>
+                    <td class="negritas">{{emps.id_emp}}</td>
 
-                    <td>{{emps.nombre_empleado}}</td>
+                    <td class="negritas">{{emps.nombre_empleado}}</td>
 
                     <br>
                     <button (click)="eliminaremp(emps)" class="btn boton-eliminar" type="button">Eliminar</button>
