--- a/src/app/horas/listhoras/listhoras.component.css
+++ b/src/app/horas/listhoras/listhoras.component.css
@@ -48,9 +48,17 @@
 
 .boton_guardar{
 
-    color:  #18246e;
-    background-color: white;
-    font-weight: bold;
+    background-color:  #18246e;
+    color: white;
+    
+    border-radius: 5px;
+    size: 10px;
+}
+
+.boton_editar{
+    background-color:  #18246e;
+    color: white;
+    
     border-radius: 5px;
     size: 10px;
 }
