--- a/src/app/animaldos/buscaranimal/buscaranimal.component.css
+++ b/src/app/animaldos/buscaranimal/buscaranimal.component.css
@@ -21,10 +21,11 @@
 
 .boton_guardar{
 
-    color:  #18246e;
-    background-color: white;
-    font-weight: bold;
+    background-color:  #18246e;
+    color: white;
+    
     border-radius: 5px;
+    size: 10px;
 }
 
 
