--- a/src/app/login/inicio/inicio.component.html
+++ b/src/app/login/inicio/inicio.component.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password" class="">Contraseña:</label><br> <br>
-                            <input type="text" name="password" id="password" class="form-control">
+                            <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-group">
                             <br>
