--- a/src/app/horas/listhoras/listhoras.component.html
+++ b/src/app/horas/listhoras/listhoras.component.html
@@ -36,16 +36,18 @@
             value={{hora}} name="nombre" style="margin-right: 50px; background-color: white;" disabled/>
 
         <!--Option con el tipo de horas-->
-        <select class="options" name="id_estado_hora" 
+        <select class="options" name="estadohora" 
         >
         <option>Seleccione un estado de hora</option>
-        <option value={{tipos.id_estado_hora}} *ngFor="let tipos of listtipo">
+        <option value={{tipos}} *ngFor="let tipos of estado_horas">
 
-          {{tipos.estado}}
+          {{tipos}}
         </option>
       </select>
 
-        <button class="boton_guardar">Modificar</button>
+      <!--Boton para guardar el cambio-->
+
+      
     </form>
 
         <br>
@@ -55,28 +57,31 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">N° procedimiento</th>
-                        <th scope="col">Nombre procedimiento</th>
-                        <th scope="col">Eliminar</th>
+                        <th scope="col">Horas</th>
+                        <th scope="col">Estado de horas</th>
+
         
         
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let horas of horaslist">
+                    <tr *ngFor="let horas of horaslist" >
         
         
-                        <td class="negritas">{{horas.id_reserva_horas}}</td>
         
                         <td class="negritas">{{horas.horas}}</td>
 
-                        <td class="negritas">{{horas.estado_hora_id_estado_hora_id}}</td>
-        
+
+                        <td class="negritas">{{horas.estado_hora}}</td>
+
                         <br>
                         <button (click)="unahora(horas)" class="boton_editar"> Editar </button>
-                     
+                        
+                        <button class="boton_guardar" (click)="modificarhora(horas)" >Modificar</button>
         
                 </tbody>
+                
+             
             </table>
         </section>
 
