--- a/src/app/animal/lanimal/lanimal.component.html
+++ b/src/app/animal/lanimal/lanimal.component.html
@@ -24,30 +24,41 @@
     <!--Se guarda el dueño -->
     <h1 class="destacado">Datos del dueño</h1>
     <div>
-      <form (ngSubmit)="onSubmit()">
+      <form #f="ngForm" (ngSubmit)="onSubmit()">
 
 
         <div class="">
 
           <label for="nombre_completo"> </label>
           <input placeholder="Ingrese nombre completo" class="form-control" class="col-2" type="text"
-            id="nombre_completo" required [(ngModel)]="model.nombre_completo" name="nombre_completo" #name="ngModel"
-            style="margin-right: 50px;" />
+            id="nombre_completo" [(ngModel)]="model.nombre_completo" name="nombre_completo" #nombre_completo="ngModel"
+            style="margin-right: 50px;" ngModel required />
+
 
           <label for="telefono"> </label>
           <input placeholder="Ingrese número de telefono" class="form-control" class="col-3" type="text" id="telefono"
-            required [(ngModel)]="model.telefono" name="telefono" />
+            [(ngModel)]="model.telefono" name="telefono" ngModel required #telefono="ngModel" />
+
+
 
         </div>
         <label for="correo"> </label>
         <input placeholder="Ingrese el correo electronico" class="form-control" class="col-3" type="text" id="correo"
-          required [(ngModel)]="model.correo" name="correo" style="margin-top: 30px;" />
-        <br>
-        <br>
-        <button class="btn btn-primary boton_guardar"  type="submit">Guardar</button>
+          [(ngModel)]="model.correo" name="correo" style="margin-top: 30px;" ngModel required #correo="ngModel" />
 
+        <div *ngIf="correo.valid && telefono.valid && nombre_completo.valid">
+          <br>
+          <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
+        </div>
+        <br>
+        <br>
+
+        <div *ngIf="!correo.valid && !telefono.valid && !nombre_completo.valid">
+          <button disabled class="btn btn-primary boton_guardar"> Guardar </button>
+        </div>
 
       </form>
+
 
       <!--Se guarda el animal-->
 
@@ -57,15 +68,16 @@
 
         <label for="nombre"> </label>
         <input class="form-control" class="col-3" placeholder="Ingrese el nombre del animal" type="text" id="nombre"
-          required [(ngModel)]="model1.nombre" name="nombre" #name="ngModel" style="margin-right: 50px;" />
+          required [(ngModel)]="model1.nombre" name="nombre" #nombre="ngModel" style="margin-right: 50px;" />
 
         <label for="n_microchip"> </label>
         <input class="form-control" class="col-3" placeholder="Ingrese el numero de microchip" type="text"
-          id="n_microchip" required [(ngModel)]="model1.n_microchip" name="n_microchip" style="margin-right: 30px;" />
+          id="n_microchip" required [(ngModel)]="model1.n_microchip" name="n_microchip" style="margin-right: 30px;"
+          #n_microchip="ngModel" />
 
 
         <select style="margin-right: 30px;" class="options" name="dueno_id_dueno_id"
-          [(ngModel)]="model1.dueno_id_dueno_id" (change)="cambiardueno($event)">
+          [(ngModel)]="model1.dueno_id_dueno_id" (change)="cambiardueno($event)" required #dueno_id_dueno_id="ngModel">
           <option> Seleccione el dueño</option>
           <option value={{duenos.id_dueno}} *ngFor="let duenos of duenolist">
             {{duenos.nombre_completo}}
@@ -74,7 +86,7 @@
 
 
         <select class="options" name="color_id_color_id" [(ngModel)]="model1.color_id_color_id"
-          (change)="cambiarcolor($event)">
+          (change)="cambiarcolor($event)" required #color_id_color_id="ngModel">
           <option>Seleccione un color</option>
           <option value={{colores.id_color}} *ngFor="let colores of coloreslist">
 
@@ -86,7 +98,8 @@
         <br>
 
         <select style="margin-right: 30px;" class="options" name="especie_id_especie_id"
-          [(ngModel)]="model1.especie_id_especie_id" (change)="cambiarespecie($event)">
+          [(ngModel)]="model1.especie_id_especie_id" (change)="cambiarespecie($event)" required
+          #especie_id_especie_id="ngModel">
           <option>Seleccione la especie </option>
           <option value={{especies.id_especie}} *ngFor="let especies of especielist">
 
@@ -96,7 +109,8 @@
 
 
         <select style="margin-right: 30px;" class="options" name="estado_id_estado_id"
-          [(ngModel)]="model1.estado_id_estado_id" (change)="cambiarestado($event)">
+          [(ngModel)]="model1.estado_id_estado_id" (change)="cambiarestado($event)" required
+          #estado_id_estado_id="ngModel">
           <option>Seleccione un estado</option>
           <option value={{estados.id_estado}} *ngFor="let estados of estadolist">
 
@@ -105,7 +119,7 @@
         </select>
 
         <select class="options" name="sexo_id_sexo_id" [(ngModel)]="model1.sexo_id_sexo_id"
-          (change)="cambiarsexo($event)">
+          (change)="cambiarsexo($event)" required #sexo_id_sexo_id="ngModel">
           <option>Seleccione el genero</option>
           <option value={{sexos.id_sexo}} *ngFor="let sexos of sexolist">
 
@@ -115,11 +129,21 @@
 
         <label for="tipo_sangre"> </label>
         <input class="form-control" class="col-3" placeholder="Ingrese el tipo de sangre del animal" type="text"
-          id="tipo_sangre" required [(ngModel)]="model1.tipo_sangre" name="tipo_sangre" style="margin-left: 30px;" />
+          id="tipo_sangre" required [(ngModel)]="model1.tipo_sangre" name="tipo_sangre" style="margin-left: 30px;"
+          required #tipo_sangre="ngModel" />
 
         <br>
         <br>
-        <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
+
+        <div *ngIf="!nombre.valid &&  !n_microchip.valid && !tipo_sangre.valid">
+          <button class="btn btn-primary boton_guardar" disabled>Guardar</button>
+        </div>
+
+
+        <div *ngIf="nombre.valid &&  n_microchip.valid && tipo_sangre.valid">
+          <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
+        </div>
+
       </form>
 
       <!--Se guarda la consulta-->
@@ -128,16 +152,10 @@
 
         <h1 class="destacado">Datos de la creación de la ficha</h1>
 
-        <label for="fecha"> </label>
-        <input placeholder="Ingrese la fecha del dia de hoy" class="form-control" class="col-3" type="text" id="fecha"
-          required [(ngModel)]="model2.fecha" name="fecha" #name="ngModel" style="margin-right: 50px;" />
 
-      
-
-        <br>
-        <br>
         <select style="margin-right: 30px;" class="options" name="reserva_horas_id_reserva_horas_id"
-          [(ngModel)]="model2.reserva_horas_id_reserva_horas_id" (change)="cambiarhora($event)">
+          [(ngModel)]="model2.reserva_horas_id_reserva_horas_id" (change)="cambiarhora($event)" required
+          #reserva_horas_id_reserva_horas_id="ngModel">
           <option>Seleccione la hora de atención</option>
           <option value={{horas.id_reserva_horas}} *ngFor="let horas of horaslist">
 
@@ -147,23 +165,36 @@
 
 
         <select style="margin-right: 30px;" class="options" name="animal_id_animal_id"
-          [(ngModel)]="model2.animal_id_animal_id" (change)="cambiarhora($event)">
+          [(ngModel)]="model2.animal_id_animal_id" (change)="cambiarhora($event)" #animal_id_animal_id="ngModel">
           <option>Seleccione el animal atendido</option>
-          <option value={{animales.id_animal}} *ngFor="let animales of animallist">
-
+          <option value={{animales.id_animal}} *ngFor="let animales of animallist" required>
             {{animales.nombre}}
           </option>
         </select>
 
         <br>
         <br>
-        <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
+
+        <label for="fecha"> </label>
+        <input placeholder="Ingrese la fecha del dia de hoy" class="form-control" class="col-3" type="text" id="fecha"
+          required [(ngModel)]="model2.fecha" name="fecha" #fecha="ngModel" style="margin-right: 50px;" />
+
+        <div *ngIf="!fecha.valid && animal_id_animal_id.valid && reserva_horas_id_reserva_horas_id.valid">
+          <br>
+          <button class="btn btn-primary boton_guardar" disabled>Guardar</button>
+        </div>
+
+        <div *ngIf="animal_id_animal_id.valid &&  fecha.valid && reserva_horas_id_reserva_horas_id.valid">
+          <br>
+          <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
+        </div>
+
 
       </form>
 
     </div>
 
-   <!-- 
+    <!-- 
     <h1 class="destacado">Procedimiento</h1>
 
     <form (ngSubmit)="onSubmit4()">
@@ -227,7 +258,7 @@
       <button class="btn btn-primary boton_guardar" type="submit">Guardar</button>
 
     </form>
-    --> 
+    -->
 
     <br>
     <br>
@@ -236,13 +267,13 @@
     <br>
 
     <select style="margin-right: 30px;" class="options" name="consulta_reserva_id_consulta_reserva_id"
-    [(ngModel)]="model3.consulta_reserva_id_consulta_reserva_id" (change)="cambiarconsulta($event)">
-    <option>Seleccione su ficha</option>
-    <option value={{consu.id_consulta_reserva}} *ngFor="let consu of consullist">
+      [(ngModel)]="model3.consulta_reserva_id_consulta_reserva_id" (change)="cambiarconsulta($event)">
+      <option>Seleccione su ficha</option>
+      <option value={{consu.id_consulta_reserva}} *ngFor="let consu of consullist">
 
-      {{consu.animal_id_animal_id}}
-    </option>
-  </select>
+        {{consu.animal_id_animal_id}}
+      </option>
+    </select>
   </div>
 
 </div>
