--- a/src/app/animaldos/buscaranimal/buscaranimal.component.html
+++ b/src/app/animaldos/buscaranimal/buscaranimal.component.html
@@ -24,7 +24,7 @@
 
     <br>
 
-    <h1 class="destacado">Ingrese la ficha del animal</h1>
+    <h1 class="destacado">Ingrese el numero de ficha del animal</h1>
     <br>
     <input [(ngModel)]="buscar_input2" type="text" name="" id="">
     <button style="margin-left: 30px;" (click)="buscar()" class="btn btn-primary boton_guardar"
@@ -32,113 +32,44 @@
 
 
     <br>
-    <!--Se guarda el dueño -->
-    <h1 class="destacado">Datos del dueño</h1>
+    <h1 class="destacado">Informacion del animal</h1>
     <br>
-    <div>
-      <form>
 
+    <label class="destacado">Nombre del animal: {{nombreanimal}} </label>
+    <br>
+    <label class="destacado">Numero de microchip: {{n_microchip}} </label>
 
-        <div class="">
+    <br>
+    <label class="destacado">Nombre del dueño: {{nombre_dueno}}</label>
 
-          <label for="nombre_completo"> </label>
+    <br>
+    <label class="destacado">Numero de telefono dueño: {{duenotelefono}}</label>
 
-          <input placeholder="Ingrese nombre completo" class="form-control" class="col-2" type="text"
-            id="nombre_completo" name="nombre_completo" style="margin-right: 50px;" value={{nombre_dueno}} />
-
-          <label for="telefono"> </label>
-          <input placeholder="Ingrese número de telefono" class="form-control" class="col-3" type="text" id="telefono"
-            name="telefono" value={{duenotelefono}} />
-
-        </div>
-        <label for="correo"> </label>
-        <input placeholder="Ingrese el correo electronico" class="form-control" class="col-3" type="text" id="correo"
-          name="correo" style="margin-top: 30px;" value={{duenocorreo}} />
-        <br>
-        <br>
-        <button class="btn btn-primary boton_guardar" type="submit">Modificar</button>
-
-      </form>
-
-      <!--Se modifica un animal-->
-      <br>
-      <br>
-
-      <h1 class="destacado">Datos del animal</h1>
-      <br>
-      <form (ngSubmit)="onSubmit()">
-
-        <label for="nombre"> </label>
-        <input class="form-control" class="col-3" placeholder="Ingrese el nombre del animal" type="text" id="nombre"
-          required [(ngModel)]="model1.nombre" name="nombre" #name="ngModel" style="margin-right: 50px;" value="{{nombreanimal}}" />
-
-        <label for="n_microchip"> </label>
-        <input class="form-control" class="col-3" placeholder="Ingrese el numero de microchip" type="text"
-          id="n_microchip" required [(ngModel)]="model1.n_microchip" name="n_microchip" style="margin-right: 30px;" value="{{n_microchip}}" />
-
-
-        <select style="margin-right: 30px;" class="options" name="dueno_id_dueno_id"
-          [(ngModel)]="model1.dueno_id_dueno_id" (change)="cambiardueno($event)">
-          <option> Seleccione el dueño</option>
-          <option value={{duenos.id_dueno}} *ngFor="let duenos of duenolist">
-            {{duenos.nombre_completo}}
-          </option>
-        </select>
-
-
-        <select class="options" name="color_id_color_id" [(ngModel)]="model1.color_id_color_id"
-          (change)="cambiarcolor($event)">
-          <option>Seleccione un color</option>
-          <option value={{colores.id_color}} *ngFor="let colores of coloreslist">
-
-            {{colores.color}}
-          </option>
-        </select>
-
-        <br>
-        <br>
-
-        <select style="margin-right: 30px;" class="options" name="especie_id_especie_id"
-          [(ngModel)]="model1.especie_id_especie_id" (change)="cambiarespecie($event)">
-          <option>Seleccione la especie </option>
-          <option value={{especies.id_especie}} *ngFor="let especies of especielist">
-
-            {{especies.nombre_especie}}
-          </option>
-        </select>
-
-
-        <select style="margin-right: 30px;" class="options" name="estado_id_estado_id"
-          [(ngModel)]="model1.estado_id_estado_id" (change)="cambiarestado($event)">
-          <option>Seleccione un estado</option>
-          <option value={{estados.id_estado}} *ngFor="let estados of estadolist">
-
-            {{estados.estado}}
-          </option>
-        </select>
-
-        <select class="options" name="sexo_id_sexo_id" [(ngModel)]="model1.sexo_id_sexo_id"
-          (change)="cambiarsexo($event)">
-          <option>Seleccione el genero</option>
-          <option value={{sexos.id_sexo}} *ngFor="let sexos of sexolist">
-
-            {{sexos.sexo}}
-          </option>
-        </select>
-
-        <label for="tipo_sangre"> </label>
-        <input class="form-control" class="col-3" placeholder="Ingrese el tipo de sangre del animal" type="text"
-          id="tipo_sangre" required [(ngModel)]="model1.tipo_sangre" name="tipo_sangre" style="margin-left: 30px;" value="{{ntipo_sangre}}"/>
-
-
-        <br>
-        <br>
-        <button (click)="modificar()" class="btn btn-primary boton_guardar" type="submit">Modificar</button>
-      </form>
+    
 
 
       <br>
       <br>
+
+    <h1 class="destacado">Informacion de ficha</h1>
+
+    <input [(ngModel)]="buscar_input3" type="text" name="" id="">
+    <button style="margin-left: 30px;" (click)="buscadorficha()" class="btn btn-primary boton_guardar"
+      type="submit">Buscar</button>
+    <br>
+
+    <label class="destacado">Fecha de revision: {{fecha_pro}}</label>
+
+    <br>
+    <label class="destacado">Motivo consulta: {{motivo_consulta}}</label>
+
+    <br>
+    <label class="destacado">Observacion: {{observacion}}</label>
+
+    <br>
+    <label class="destacado">Peso: {{peso}} KG</label>
+
+
 
 
       <h1 class="destacado">Consulta y procedimiento</h1>
