--- a/src/app/procedimiento/listproce/listproce.component.html
+++ b/src/app/procedimiento/listproce/listproce.component.html
@@ -57,29 +57,32 @@
         <br>
         <section>
 
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th scope="col">Nombre procedimiento</th>
-                        <th scope="col">Eliminar</th>
-
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let procedimientos of procelist">
-
-
-
-                        <td class="negritas">{{procedimientos.nombre_procedimiento}}</td>
-
-                        <br>
-                        <button (click)="eliminarproce(procedimientos)" class="btn boton-eliminar"
-                            type="button">Eliminar</button>
-
-            </table>
+       
 
         </section>
+
+        <table datatable [dtOptions]="dtoptions" [dtTrigger]="dtTrigger" class="table table-dark" style="width:60%">
+            <thead>
+                <tr>
+                    
+                    <th>
+                        Nombre procedimiento
+                    </th>
+                    <th>
+                        Eliminar
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr  *ngFor="let procedimientos of procelist">
+                    <td class="negritas">{{procedimientos.nombre_procedimiento}}</td>
+                    <td>
+                        <button (click)="eliminarproce(procedimientos)" class="btn boton-eliminar"
+                            type="button">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
     </div>
 
