Implementacion de especie en la busqueda

--- a/src/app/animaldos/buscaranimal/buscaranimal.component.html
+++ b/src/app/animaldos/buscaranimal/buscaranimal.component.html
@@ -38,6 +38,8 @@
     <label class="destacado">Nombre del animal: {{nombreanimal}} </label>
     <br>
     <label class="destacado">Numero de microchip: {{n_microchip}} </label>
+    <br>
+    <label class="destacado">Especie: {{nombre_especie}} </label>
 
     <br>
     <label class="destacado">Nombre del dueño: {{nombre_dueno}}</label>
